Implemented more functionality + styling per requirements, logged known bugs

--- a/pulsefit-appointment-dashboard/src/components/Calendar/Calendar.module.scss
+++ b/pulsefit-appointment-dashboard/src/components/Calendar/Calendar.module.scss
@@ -1,7 +1,7 @@
 @use '../../styles/variables.scss' as *;
 
 .calendarWrapper {
-    background-color: $color-light;
+    background-color: $color-white;
     border: 1px solid $color-main;
     border-radius: 12px;
     padding: 16px;
