--- a/pulsefit-appointment-dashboard/src/components/Header/Header.module.scss
+++ b/pulsefit-appointment-dashboard/src/components/Header/Header.module.scss
@@ -9,8 +9,12 @@
 
     .logo {
         img {
-            max-width: 250px;
+            max-width: 150px;
             max-height: 100px;
+
+            @media (min-width: $breakpoint-md) {
+                max-width: 250px;
+            }
         }
     }
     .userDropdown {
