--- a/pulsefit-appointment-dashboard/src/components/TimeSlot/TimeSlot.module.scss
+++ b/pulsefit-appointment-dashboard/src/components/TimeSlot/TimeSlot.module.scss
@@ -1,18 +1,26 @@
 @use '../../styles/variables.scss' as *;
 
 .timeSlot {
-    background-color: $color-light;
+    background-color: $color-white;
     border: 1px solid $color-border;
     border-radius: 8px;
-    padding: 10px 14px;
+    padding: 3px 5px;
     color: $color-main;
+    margin: 8px;
+    font-weight: $font-weight-bold;
+
+    @media(min-width: $breakpoint-md) {
+        width: 120px;
+        display: inline-flex;
+        justify-content: center;
+    }
 
     &:hover {
         cursor: pointer;
     }
 
     &.selected {
-        color: $color-light;
+        color: $color-white;
         background-color: $color-main;
     }
 
