--- a/pulsefit-appointment-dashboard/src/styles/variables.scss
+++ b/pulsefit-appointment-dashboard/src/styles/variables.scss
@@ -5,6 +5,7 @@ $color-dark: #1E1B4B;
 $color-background: #F7F9FB;
 $color-error: #EF4444;
 $color-border: #E5E5E5;
+$color-white: #fff;
 
 // Global Typography
 $font-family: "Helvetica";
