--- a/pulsefit-appointment-dashboard/src/components/SubmitConfirmation/SubmitConfirmation.module.scss
+++ b/pulsefit-appointment-dashboard/src/components/SubmitConfirmation/SubmitConfirmation.module.scss
@@ -30,4 +30,11 @@
             padding: 20px;
         }
     }
+
+    .navigation {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100%;
+    }
 }
