--- a/pulsefit-appointment-dashboard/src/App.module.scss
+++ b/pulsefit-appointment-dashboard/src/App.module.scss
@@ -1,5 +1,7 @@
-
-
-.dashboard {
-    
+.app {
+    max-width: 960px;
+    margin: 0 auto;
+    width: 100%;
+    padding: 0 16px;
+    box-sizing: border-box;
 }
