--- a/pulsefit-appointment-dashboard/src/components/TimeSlot/TimeSlot.module.scss
+++ b/pulsefit-appointment-dashboard/src/components/TimeSlot/TimeSlot.module.scss
@@ -6,8 +6,8 @@
     border-radius: 8px;
     padding: 3px 5px;
     color: $color-main;
-    margin: 8px;
     font-weight: $font-weight-bold;
+    text-align: center;
 
     @media(min-width: $breakpoint-md) {
         width: 120px;
@@ -21,7 +21,7 @@
 
     &.selected {
         color: $color-white;
-        background-color: $color-main;
+        background-color: $color-dark;
     }
 
     &.disabled {
