--- a/pulsefit-appointment-dashboard/src/index.scss
+++ b/pulsefit-appointment-dashboard/src/index.scss
@@ -18,3 +18,35 @@ body {
     font-size: $font-size-subheading;
   }
 }
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+.btn {
+  padding: 16px 12px;
+    text-align: center;
+    border-radius: 50px;
+    font-weight: $font-weight-bold;
+    
+    &:hover {
+        cursor: pointer;
+    }
+
+    @media (min-width: $breakpoint-md) {
+        border-radius: 8px;
+    }
+
+  &.primary {
+    background-color: $color-main;
+    color: $color-white;
+  }
+
+  &.secondary {
+    background-color: $color-white;
+    border: 1px solid $color-main;
+    color: $color-main;
+  }
+}
