--- a/pulsefit-appointment-dashboard/src/components/Header/Header.module.scss
+++ b/pulsefit-appointment-dashboard/src/components/Header/Header.module.scss
@@ -29,7 +29,7 @@
             }
             
             .userIcon {
-    
+                font-size: 22px;
             }
     
             .userDisplayName {
