--- a/pulsefit-appointment-dashboard/src/components/Header/Header.module.scss
+++ b/pulsefit-appointment-dashboard/src/components/Header/Header.module.scss
@@ -42,9 +42,10 @@
         box-sizing: border-box;
         padding: 10px;
         margin: 10px;
-        height: 150px;
+        min-height: 150px;
         border-radius: 16px;
         border: 1px solid $color-border;
+        background-color: $color-white;
 
         @media (min-width: $breakpoint-md) {
             max-width: 600px;
