--- a/pulsefit-appointment-dashboard/src/components/SubmitConfirmation/SubmitConfirmation.module.scss
+++ b/pulsefit-appointment-dashboard/src/components/SubmitConfirmation/SubmitConfirmation.module.scss
@@ -5,12 +5,18 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+    width: 100%;
+    padding: 32px 16px;
+
+    h1 {
+        margin-top: 0;
+    }
 
     .checkmark {
         color: $color-main;
         width: 72px;
         height: 72px;
-        margin-bottom: 30px;
+        margin-bottom: 10px;
     }
     
     .trainerConfirmCard {
@@ -18,23 +24,54 @@
         background: $color-white;
         border-radius: 16px;
         border: 1px solid $color-border;
-        box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.06);
-
-        display: flex;
-        align-items: flex-start;
-
+        box-shadow: 0px 2px 8px $color-border;
         padding: 16px;
         margin-bottom: 40px;
 
         @media (min-width: $breakpoint-md) {
+            max-width: 600px;
             padding: 20px;
         }
-    }
 
+        .trainerInfo {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+
+            .photo img {
+                max-width: 150px;
+                max-height: 150px;
+                object-fit: cover;
+            }
+
+            .details {
+                display: flex;
+                flex-direction: column;
+                text-align: left;
+                margin: 0 10px;
+
+                .name {
+                    font-weight: $font-weight-bold;
+                    font-size: 20px;
+                }
+
+                .title {
+                    color: #4F6F7A;
+                }
+            }
+        }
+        
+    }
+    
     .navigation {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         width: 100%;
+
+        @media (min-width: $breakpoint-md) {
+            max-width: 600px;
+        }
+
     }
 }
